feat(security): siết CORS, thêm rate-limit và xác thực magic-bytes, giảm dữ liệu lộ qua tra-cứu-SĐT
- CORS: bỏ wildcard "*", chỉ cho phép localhost:5173/4173 (dev)
- SecurityConfig: tách permitAll theo method (GET-only cho sản phẩm/danh mục/
  cấu hình cửa hàng), thêm public-docs, phân biệt rõ 401 (chưa đăng nhập) vs
  403 (sai quyền)
- RateLimitingFilter: giới hạn 5 lần/phút/IP cho /api/auth/login VÀ
  /api/khach-hang/tim-theo-sdt (endpoint permitAll, không giới hạn thì dò
  được số điện thoại ngẫu nhiên để biết ai đã là khách hàng)
- RequestLoggingFilter: log request phục vụ điều tra sự cố
- UploadController: xác thực magic-bytes (chặn file giả đuôi .exe→.png),
  luôn tự sinh tên file bằng UUID (chặn path traversal ghi đè file nguồn)
- KhachHangController/Service.findBySoDienThoai: trả KhachHangLookupResponse
  rút gọn (chỉ hoTen/soDienThoai/email/diaChi/id) thay vì entity đầy đủ —
  endpoint permitAll trước đây lộ cả soDuVi/diemTichLuy cho bất kỳ ai dò SĐT
- KhachHangRegisterRequest: mật khẩu tối thiểu 4→8 ký tự

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>